# rust-attempt

./: Cargo.toml  README.md
benches/: lib.rs
src/: lib.rs
tests/: lib.rs
