[package]
name = "attempt"
version = "0.1.1-dev"
authors = ["Dabo Ross <daboross@daboross.net>, Ivan Dmitrievsky <ivan.dmitrievsky@gmail.com>"]
description = "Attempt is an extension of error handling in rust which adds statically produced stack traces"

repository = "https://github.com/idmit/rust-attempt/"

readme = "README.md"
keywords = ["attempt", "error", "catch", "result"]
license = "MIT"
